--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,28 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: rgb(1, 3, 24);
+    background-color: #00030a;
 }
 *{
     list-style-type: none;
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    background-color: #00030a;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #2fa4e7;
+    border-radius: 500px;
+}
 
 header{
     width: 100%;
     height: 50px;
-    background-color: rgb(22, 200, 231);
+    background-color: #2fa4e7;
     position: sticky;
     top: 0;
     display: inline-flex;
@@ -64,7 +74,7 @@ main form input{
     margin-bottom: 38px;
     height: 50px;
     background-color: transparent;
-    border: 1px solid rgb(22, 200, 231);
+    border: 1px solid #2fa4e7;
     text-align: center;
     color: white;
     font-size: 14px;
@@ -74,7 +84,7 @@ main form input{
     color: rgb(22,200,231);
 }
 main form input:last-child{
-    background-color: rgb(9, 168, 168);
+    background-color: #2fa4e7;
     font-family: monospace;
     font-size: 17px;
 }
