--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -4,6 +4,7 @@ body{
     box-sizing: border-box;
     overflow-y: hidden;
     overflow-x: hidden;
+    background-color: #00030a;
 }
 *{
     list-style-type: none;
@@ -137,6 +138,8 @@ main{
 }
 
 .chat-space{
+    box-sizing: border-box;
+    padding-top: 10px;
     background-color: #00000000;
     height: max-content;
     width: 100%;
