--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -143,7 +143,7 @@ main{
     background-color: #00000000;
     height: max-content;
     width: 100%;
-    display: block;
+    display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
